--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-dbcp
     compile group: 'org.apache.tomcat', name: 'tomcat-dbcp', version: '9.0.2'
 
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
 
     //compile 'org.springframework.security:spring-security-core:4.1.3.RELEASE'
 }
