--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     compile 'org.springframework:spring-orm:4.2.5.RELEASE'
     //compile 'org.springframework.boot:spring-boot-starter-data-rest'
     //compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    //compile 'org.springframework.data:spring-data-rest-hal-browser'
     compile 'org.slf4j:slf4j-api:1.7.13'
     //compile 'org.springframework.boot:spring-boot-starter-security'
 
@@ -38,6 +37,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
-
+    compile 'org.springframework.security:spring-security-web:5.0.4.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-security'
     //compile 'org.springframework.security:spring-security-core:4.1.3.RELEASE'
 }
